--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.7.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "hls.js": "^1.6.2",
     "lucide-react": "^0.488.0",
@@ -22,6 +26,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
@@ -34,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
     "vite": "^5.4.1"
   }
