--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@filmgardi/videojs-markers": "^2.0.0",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@reduxjs/toolkit": "^2.2.7",
@@ -27,7 +28,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "videojs-markers": "^1.0.1",
+    "videojs-markers-plugin": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -42,6 +45,7 @@
     "globals": "^15.9.0",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
+    "video.js": "^8.22.0",
     "vite": "^5.4.1"
   }
 }
