--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.8.1",
     "framer-motion": "^11.5.4",
     "hls.js": "^1.6.2",
     "lucide-react": "^0.488.0",
