added google-sign-in search and ui changes

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_API_URL=https://backend-youtube-zba1.onrender.com
+
+clientId="489943413452-n33kjdhudobo4jfti2jbvoqs5tjghat9.apps.googleusercontent.com";
