--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@filmgardi/videojs-markers": "^2.0.0",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.7.5",
@@ -21,6 +22,7 @@
     "firebase": "^11.8.1",
     "framer-motion": "^11.5.4",
     "hls.js": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
@@ -38,6 +40,7 @@
     "@types/node": "^22.15.17",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/video.js": "^7.3.58",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
