--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "videojs-markers": "^1.0.1",
@@ -49,7 +50,9 @@
     "globals": "^15.9.0",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
-    "video.js": "^8.22.0",
+    "video.js": "^7.21.3",
+    "videojs-contrib-quality-levels": "^3.0.0",
+    "videojs-http-source-selector": "^1.1.6",
     "vite": "^5.4.1"
   }
 }
